--- a/Configuration/application.plist
+++ b/Configuration/application.plist
@@ -20,6 +20,12 @@
 	<string>120</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Add Photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
