--- a/Configuration/application.plist
+++ b/Configuration/application.plist
@@ -16,6 +16,19 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>2.5.201</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>iturbide.catban</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>catban</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>201</string>
 	<key>LSRequiresIPhoneOS</key>
