--- a/Catban.xcodeproj/xcshareddata/xcschemes/Catban.xcscheme
+++ b/Catban.xcodeproj/xcshareddata/xcschemes/Catban.xcscheme
@@ -29,8 +29,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            testExecutionOrdering = "random">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DA145033211DD23100D1BD9E"
